ARROW-5471: [C++][Gandiva] Array offset is ignored in Gandiva projector

Fix for JIRA issue https://issues.apache.org/jira/browse/ARROW-5471
Basically it adds offset for each buffer  in the generated function to compute the correct index.

Closes #5255 from zeyuanxy/ARROW-5471 and squashes the following commits:

a0ebf9d13 <Zeyuan Shang> remove redundant code
e200fed44 <Zeyuan Shang> address review comments
52e5fae42 <Zeyuan Shang> update test cases to make some elements invalid
8c6c132b8 <Zeyuan Shang> fix format
869a54dcd <Zeyuan Shang> format
1a057a4ea <Zeyuan Shang> fix bitmap
2ceff2eb2 <Zeyuan Shang> add more test cases
b4bedb460 <Zeyuan Shang> fix format
6546e9577 <Zeyuan Shang> make linter happy
43f1160a5 <Zeyuan Shang> fix compilation error
81b73d042 <Zeyuan Shang> fix offset bug
f9b4b3ed8 <Zeyuan Shang> add test case for offset

Authored-by: Zeyuan Shang <zeyuanxy@gmail.com>
Signed-off-by: Wes McKinney <wesm+git@apache.org>